--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -47,6 +47,7 @@
   
   <!-- Your Custom JavaScript -->
   {{ 'looks-max-scripts.js' | asset_url | script_tag }}
+  {{ 'quantity-selector.js' | asset_url | script_tag }}
   
 </body>
 </html>
